--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
     "name": "decorate/shrp",
     "require": {
-	"php": "^7.1.3",
+	    "php": "^7.1.3",
         "laravel/framework": "5.8.*",
         "shrp-commands/js-model-make": "^1.0.1",
         "shrp-services/image-upload": "^1.0.11"
     },
-    "license": "MIT"
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Decorate\\Shrp\\": "src/"
         }
-    },,
+    },
     "minimum-stability": "dev"
 }
